--- a/survey-app/public/styles/site/_layout.styl
+++ b/survey-app/public/styles/site/_layout.styl
@@ -81,7 +81,7 @@
 
 #moduleLinks
     padding-top 65px
-    margin-left 10px
+    margin-left -35px
 
 #moduleLinks .nav-link
     background-color white
@@ -144,7 +144,7 @@
 body 
     padding-top 50px
 
-#assessment h3
+#assessment-page h3
     padding-top 10px
     padding-bottom 10px
 
